src/main/java/eu/trade/repo/query/CMISParser.java
package eu.trade.repo.query;
import eu.trade.repo.query.ast.*;
import eu.trade.repo.query.ast.TreeFilter;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class CMISParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ANY", "AS", "ASC", "BINARY_OPERATOR", 
		"BOOLEAN", "COLUMN", "COMMA", "CONST", "CONTAINS", "DESC", "DOT", "EQUALS", 
		"ESC_SEQ", "FILTER", "FROM", "HEX_DIGIT", "IN", "INTEGER", "IN_FOLDER", 
		"IN_TREE", "IS", "LIKE", "LPAREN", "NAME", "NOT", "NULL", "OCTAL_ESC", 
		"OR", "ORDER", "ORDER_BY", "QUOTE", "RPAREN", "SCORE", "SELECT", "STAR", 
		"STRING", "TABLE", "TIMESTAMP", "UNICODE_ESC", "WHERE", "WS", "'SEARCH_SCORE'"
	};
	public static final int EOF=-1;
	public static final int T__46=46;
	public static final int AND=4;
	public static final int ANY=5;
	public static final int AS=6;
	public static final int ASC=7;
	public static final int BINARY_OPERATOR=8;
	public static final int BOOLEAN=9;
	public static final int COLUMN=10;
	public static final int COMMA=11;
	public static final int CONST=12;
	public static final int CONTAINS=13;
	public static final int DESC=14;
	public static final int DOT=15;
	public static final int EQUALS=16;
	public static final int ESC_SEQ=17;
	public static final int FILTER=18;
	public static final int FROM=19;
	public static final int HEX_DIGIT=20;
	public static final int IN=21;
	public static final int INTEGER=22;
	public static final int IN_FOLDER=23;
	public static final int IN_TREE=24;
	public static final int IS=25;
	public static final int LIKE=26;
	public static final int LPAREN=27;
	public static final int NAME=28;
	public static final int NOT=29;
	public static final int NULL=30;
	public static final int OCTAL_ESC=31;
	public static final int OR=32;
	public static final int ORDER=33;
	public static final int ORDER_BY=34;
	public static final int QUOTE=35;
	public static final int RPAREN=36;
	public static final int SCORE=37;
	public static final int SELECT=38;
	public static final int STAR=39;
	public static final int STRING=40;
	public static final int TABLE=41;
	public static final int TIMESTAMP=42;
	public static final int UNICODE_ESC=43;
	public static final int WHERE=44;
	public static final int WS=45;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CMISParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CMISParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return CMISParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g"; }


	public static class cmis_query_return extends ParserRuleReturnScope {
		CMISCommonTree tree;
		@Override
		public CMISCommonTree getTree() { return tree; }
	};


	// $ANTLR start "cmis_query"
	// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:28:1: cmis_query : SELECT ! columns FROM ! tables ( WHERE ! where_clause )? ( ORDER_BY ! order_by_clause )? EOF !;
	public final CMISParser.cmis_query_return cmis_query() throws RecognitionException {
		CMISParser.cmis_query_return retval = new CMISParser.cmis_query_return();
		retval.start = input.LT(1);

		CMISCommonTree root_0 = null;

		Token SELECT1=null;
		Token FROM3=null;
		Token WHERE5=null;
		Token ORDER_BY7=null;
		Token EOF9=null;
		ParserRuleReturnScope columns2 =null;
		ParserRuleReturnScope tables4 =null;
		ParserRuleReturnScope where_clause6 =null;
		ParserRuleReturnScope order_by_clause8 =null;

		CMISCommonTree SELECT1_tree=null;
		CMISCommonTree FROM3_tree=null;
		CMISCommonTree WHERE5_tree=null;
		CMISCommonTree ORDER_BY7_tree=null;
		CMISCommonTree EOF9_tree=null;

		try {
			// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:28:11: ( SELECT ! columns FROM ! tables ( WHERE ! where_clause )? ( ORDER_BY ! order_by_clause )? EOF !)
			// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:28:13: SELECT ! columns FROM ! tables ( WHERE ! where_clause )? ( ORDER_BY ! order_by_clause )? EOF !
			{
			root_0 = (CMISCommonTree)adaptor.nil();


			SELECT1=(Token)match(input,SELECT,FOLLOW_SELECT_in_cmis_query87); if (state.failed) return retval;
			pushFollow(FOLLOW_columns_in_cmis_query90);
			columns2=columns();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, columns2.getTree());

			FROM3=(Token)match(input,FROM,FOLLOW_FROM_in_cmis_query92); if (state.failed) return retval;
			pushFollow(FOLLOW_tables_in_cmis_query95);
			tables4=tables();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, tables4.getTree());

			// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:28:42: ( WHERE ! where_clause )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==WHERE) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:28:43: WHERE ! where_clause
					{
					WHERE5=(Token)match(input,WHERE,FOLLOW_WHERE_in_cmis_query98); if (state.failed) return retval;
					pushFollow(FOLLOW_where_clause_in_cmis_query101);
					where_clause6=where_clause();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, where_clause6.getTree());

					}
					break;

			}

			// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:28:65: ( ORDER_BY ! order_by_clause )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==ORDER_BY) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:28:66: ORDER_BY ! order_by_clause
					{
					ORDER_BY7=(Token)match(input,ORDER_BY,FOLLOW_ORDER_BY_in_cmis_query106); if (state.failed) return retval;
					pushFollow(FOLLOW_order_by_clause_in_cmis_query109);
					order_by_clause8=order_by_clause();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, order_by_clause8.getTree());

					}
					break;

			}

			EOF9=(Token)match(input,EOF,FOLLOW_EOF_in_cmis_query113); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CMISCommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CMISCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "cmis_query"


	public static class columns_return extends ParserRuleReturnScope {
		CMISCommonTree tree;
		@Override
		public CMISCommonTree getTree() { return tree; }
	};


	// $ANTLR start "columns"
	// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:30:1: columns : ( all_columns -> COLUMN[\"*\", null, null, null] | column_expr ( COMMA ! column_expr )* );
	public final CMISParser.columns_return columns() throws RecognitionException {
		CMISParser.columns_return retval = new CMISParser.columns_return();
		retval.start = input.LT(1);

		CMISCommonTree root_0 = null;

		Token COMMA12=null;
		ParserRuleReturnScope all_columns10 =null;
		ParserRuleReturnScope column_expr11 =null;
		ParserRuleReturnScope column_expr13 =null;

		CMISCommonTree COMMA12_tree=null;
		RewriteRuleSubtreeStream stream_all_columns=new RewriteRuleSubtreeStream(adaptor,"rule all_columns");

		try {
			// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:30:8: ( all_columns -> COLUMN[\"*\", null, null, null] | column_expr ( COMMA ! column_expr )* )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==STAR) ) {
				alt4=1;
			}
			else if ( (LA4_0==NAME||LA4_0==SCORE) ) {
				alt4=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:30:10: all_columns
					{
					pushFollow(FOLLOW_all_columns_in_columns121);
					all_columns10=all_columns();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_all_columns.add(all_columns10.getTree());
					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CMISCommonTree)adaptor.nil();
					// 30:22: -> COLUMN[\"*\", null, null, null]
					{
						adaptor.addChild(root_0, new Column(COLUMN, "*", null, null, null));
					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:30:65: column_expr ( COMMA ! column_expr )*
					{
					root_0 = (CMISCommonTree)adaptor.nil();


					pushFollow(FOLLOW_column_expr_in_columns133);
					column_expr11=column_expr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, column_expr11.getTree());

					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:30:77: ( COMMA ! column_expr )*
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==COMMA) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:30:78: COMMA ! column_expr
							{
							COMMA12=(Token)match(input,COMMA,FOLLOW_COMMA_in_columns136); if (state.failed) return retval;
							pushFollow(FOLLOW_column_expr_in_columns139);
							column_expr13=column_expr();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) adaptor.addChild(root_0, column_expr13.getTree());

							}
							break;

						default :
							break loop3;
						}
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CMISCommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CMISCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "columns"


	public static class column_expr_return extends ParserRuleReturnScope {
		CMISCommonTree tree;
		@Override
		public CMISCommonTree getTree() { return tree; }
	};


	// $ANTLR start "column_expr"
	// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:31:1: column_expr : ( SCORE ( ( AS )? alias )? -> COLUMN[null, null, $alias.text, \"score\"] | ( qualifier DOT )? column ( ( AS )? alias )? -> COLUMN[$column.text, $qualifier.text, $alias.text, null] | qualifier DOT all_columns -> COLUMN[\"*\", $qualifier.text, null, null] );
	public final CMISParser.column_expr_return column_expr() throws RecognitionException {
		CMISParser.column_expr_return retval = new CMISParser.column_expr_return();
		retval.start = input.LT(1);

		CMISCommonTree root_0 = null;

		Token SCORE14=null;
		Token AS15=null;
		Token DOT18=null;
		Token AS20=null;
		Token DOT23=null;
		ParserRuleReturnScope alias16 =null;
		ParserRuleReturnScope qualifier17 =null;
		ParserRuleReturnScope column19 =null;
		ParserRuleReturnScope alias21 =null;
		ParserRuleReturnScope qualifier22 =null;
		ParserRuleReturnScope all_columns24 =null;

		CMISCommonTree SCORE14_tree=null;
		CMISCommonTree AS15_tree=null;
		CMISCommonTree DOT18_tree=null;
		CMISCommonTree AS20_tree=null;
		CMISCommonTree DOT23_tree=null;
		RewriteRuleTokenStream stream_AS=new RewriteRuleTokenStream(adaptor,"token AS");
		RewriteRuleTokenStream stream_SCORE=new RewriteRuleTokenStream(adaptor,"token SCORE");
		RewriteRuleTokenStream stream_DOT=new RewriteRuleTokenStream(adaptor,"token DOT");
		RewriteRuleSubtreeStream stream_alias=new RewriteRuleSubtreeStream(adaptor,"rule alias");
		RewriteRuleSubtreeStream stream_column=new RewriteRuleSubtreeStream(adaptor,"rule column");
		RewriteRuleSubtreeStream stream_all_columns=new RewriteRuleSubtreeStream(adaptor,"rule all_columns");
		RewriteRuleSubtreeStream stream_qualifier=new RewriteRuleSubtreeStream(adaptor,"rule qualifier");

		try {
			// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:31:12: ( SCORE ( ( AS )? alias )? -> COLUMN[null, null, $alias.text, \"score\"] | ( qualifier DOT )? column ( ( AS )? alias )? -> COLUMN[$column.text, $qualifier.text, $alias.text, null] | qualifier DOT all_columns -> COLUMN[\"*\", $qualifier.text, null, null] )
			int alt10=3;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==SCORE) ) {
				alt10=1;
			}
			else if ( (LA10_0==NAME) ) {
				int LA10_2 = input.LA(2);
				if ( (LA10_2==DOT) ) {
					int LA10_3 = input.LA(3);
					if ( (LA10_3==NAME) ) {
						alt10=2;
					}
					else if ( (LA10_3==STAR) ) {
						alt10=3;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 10, 3, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA10_2==AS||LA10_2==COMMA||LA10_2==FROM||LA10_2==NAME) ) {
					alt10=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return retval;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 10, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}

			switch (alt10) {
				case 1 :
					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:32:3: SCORE ( ( AS )? alias )?
					{
					SCORE14=(Token)match(input,SCORE,FOLLOW_SCORE_in_column_expr151); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_SCORE.add(SCORE14);

					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:32:9: ( ( AS )? alias )?
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==AS||LA6_0==NAME) ) {
						alt6=1;
					}
					switch (alt6) {
						case 1 :
							// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:32:10: ( AS )? alias
							{
							// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:32:10: ( AS )?
							int alt5=2;
							int LA5_0 = input.LA(1);
							if ( (LA5_0==AS) ) {
								alt5=1;
							}
							switch (alt5) {
								case 1 :
									// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:32:10: AS
									{
									AS15=(Token)match(input,AS,FOLLOW_AS_in_column_expr154); if (state.failed) return retval; 
									if ( state.backtracking==0 ) stream_AS.add(AS15);

									}
									break;

							}

							pushFollow(FOLLOW_alias_in_column_expr157);
							alias16=alias();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) stream_alias.add(alias16.getTree());
							}
							break;

					}

					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CMISCommonTree)adaptor.nil();
					// 32:22: -> COLUMN[null, null, $alias.text, \"score\"]
					{
						adaptor.addChild(root_0, new Column(COLUMN, null, null, (alias16!=null?input.toString(alias16.start,alias16.stop):null), "score"));
					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:33:3: ( qualifier DOT )? column ( ( AS )? alias )?
					{
					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:33:3: ( qualifier DOT )?
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==NAME) ) {
						int LA7_1 = input.LA(2);
						if ( (LA7_1==DOT) ) {
							alt7=1;
						}
					}
					switch (alt7) {
						case 1 :
							// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:33:4: qualifier DOT
							{
							pushFollow(FOLLOW_qualifier_in_column_expr175);
							qualifier17=qualifier();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) stream_qualifier.add(qualifier17.getTree());
							DOT18=(Token)match(input,DOT,FOLLOW_DOT_in_column_expr177); if (state.failed) return retval; 
							if ( state.backtracking==0 ) stream_DOT.add(DOT18);

							}
							break;

					}

					pushFollow(FOLLOW_column_in_column_expr181);
					column19=column();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_column.add(column19.getTree());
					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:33:27: ( ( AS )? alias )?
					int alt9=2;
					int LA9_0 = input.LA(1);
					if ( (LA9_0==AS||LA9_0==NAME) ) {
						alt9=1;
					}
					switch (alt9) {
						case 1 :
							// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:33:28: ( AS )? alias
							{
							// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:33:28: ( AS )?
							int alt8=2;
							int LA8_0 = input.LA(1);
							if ( (LA8_0==AS) ) {
								alt8=1;
							}
							switch (alt8) {
								case 1 :
									// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:33:28: AS
									{
									AS20=(Token)match(input,AS,FOLLOW_AS_in_column_expr184); if (state.failed) return retval; 
									if ( state.backtracking==0 ) stream_AS.add(AS20);

									}
									break;

							}

							pushFollow(FOLLOW_alias_in_column_expr187);
							alias21=alias();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) stream_alias.add(alias21.getTree());
							}
							break;

					}

					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CMISCommonTree)adaptor.nil();
					// 33:40: -> COLUMN[$column.text, $qualifier.text, $alias.text, null]
					{
						adaptor.addChild(root_0, new Column(COLUMN, (column19!=null?input.toString(column19.start,column19.stop):null), (qualifier17!=null?input.toString(qualifier17.start,qualifier17.stop):null), (alias21!=null?input.toString(alias21.start,alias21.stop):null), null));
					}


					retval.tree = root_0;
					}

					}
					break;
				case 3 :
					// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:34:3: qualifier DOT all_columns
					{
					pushFollow(FOLLOW_qualifier_in_column_expr204);
					qualifier22=qualifier();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_qualifier.add(qualifier22.getTree());
					DOT23=(Token)match(input,DOT,FOLLOW_DOT_in_column_expr206); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_DOT.add(DOT23);

					pushFollow(FOLLOW_all_columns_in_column_expr208);
					all_columns24=all_columns();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_all_columns.add(all_columns24.getTree());
					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CMISCommonTree)adaptor.nil();
					// 34:29: -> COLUMN[\"*\", $qualifier.text, null, null]
					{
						adaptor.addChild(root_0, new Column(COLUMN, "*", (qualifier22!=null?input.toString(qualifier22.start,qualifier22.stop):null), null, null));
					}


					retval.tree = root_0;
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CMISCommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CMISCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "column_expr"


	public static class qualifier_return extends ParserRuleReturnScope {
		CMISCommonTree tree;
		@Override
		public CMISCommonTree getTree() { return tree; }
	};


	// $ANTLR start "qualifier"
	// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:36:1: qualifier : NAME ;
	public final CMISParser.qualifier_return qualifier() throws RecognitionException {
		CMISParser.qualifier_return retval = new CMISParser.qualifier_return();
		retval.start = input.LT(1);

		CMISCommonTree root_0 = null;

		Token NAME25=null;

		CMISCommonTree NAME25_tree=null;

		try {
			// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:36:10: ( NAME )
			// C:\\dev\\git\\repo\\src\\main\\java\\eu\\trade\\repo\\query\\CMIS.g:36:12: NAME
			{
			root_0 = (CMISCommonTree)adaptor.nil();


			NAME25=(Token)match(input,NAME,FOLLOW_NAME_in_qualifier225); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			NAME25_tree = (CMISCommonTree)adaptor.create(NAME25);
			adaptor.addChild(root_0, NAME25_tree);
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CMISCommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CMISCommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "qualifier"


	public static class column_return extends ParserRuleReturnScope {
		CMISCommonTree tree;
		@Override
		public CMISCommonTree getTree() { return tree; }
	};

